--- a/admin.conf
+++ b/admin.conf
@@ -9,11 +9,11 @@ server {
     try_files $uri $uri/ /index.html;
   }
 
-  #listen 443 ssl; # managed by Certbot
-  #ssl_certificate /etc/letsencrypt/live/admin.gotchadiablo.com/fullchain.pem; # managed by Certbot
-  #ssl_certificate_key /etc/letsencrypt/live/admin.gotchadiablo.com/privkey.pem; # managed by Certbot
-  #include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-  #ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+  listen 443 ssl; # managed by Certbot
+  ssl_certificate /etc/letsencrypt/live/admin.gotchadiablo.com/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/admin.gotchadiablo.com/privkey.pem; # managed by Certbot
+  include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 }
 
 server {
