--- a/backend.conf
+++ b/backend.conf
@@ -1,11 +1,11 @@
-upstream backend.gotchadiablo.com {
-  server 127.0.0.1:4111;
+upstream backend.dev.gotchadiablo.com {
+  server 127.0.0.1:4112;
 }
 
 server {
-  server_name backend.gotchadiablo.com;
-  access_log /var/log/nginx/backend.gotchadiablo.com.access.log;
-  error_log /var/log/nginx/backend.gotchadiablo.com.error.log debug;
+  server_name backend.dev.gotchadiablo.com;
+  access_log /var/log/nginx/backend.dev.gotchadiablo.com.access.log;
+  error_log /var/log/nginx/backend.dev.gotchadiablo.com.error.log debug;
 
   location / {
     proxy_set_header X-Real-IP $remote_addr;
@@ -13,21 +13,7 @@ server {
     proxy_set_header Host $http_host;
     proxy_set_header X-NginX-Proxy true;
 
-    proxy_pass http://backend.gotchadiablo.com;
+    proxy_pass http://backend.dev.gotchadiablo.com;
     proxy_redirect off;
   }
-  listen 443 ssl; # managed by Certbot
-  ssl_certificate /etc/letsencrypt/live/backend.gotchadiablo.com/fullchain.pem; # managed by Certbot
-  ssl_certificate_key /etc/letsencrypt/live/backend.gotchadiablo.com/privkey.pem; # managed by Certbot
-  include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-}
-
-server {
-    if ($host = backend.gotchadiablo.com) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-  server_name backend.gotchadiablo.com;
-    return 404; # managed by Certbot
 }
