--- a/admin.conf
+++ b/admin.conf
@@ -1,26 +1,11 @@
 server {
-  root /var/lib/jenkins/workspace/GotchaDiablo_master/app/dist/gotchadiablo;
+  root /var/lib/jenkins/workspace/GotchaDiablo_dev/app/dist/gotchadiablo;
   index index.html index.htm;
-  server_name admin.gotchadiablo.com;
-  access_log /var/log/nginx/admin.gotchadiablo.com.access.log;
-  error_log /var/log/nginx/admin.gotchadiablo.com.error.log debug;
+  server_name admin.dev.gotchadiablo.com;
+  access_log /var/log/nginx/admin.dev.gotchadiablo.com.access.log;
+  error_log /var/log/nginx/admin.dev.gotchadiablo.com.error.log debug;
 
   location / {
     try_files $uri $uri/ /index.html;
   }
-
-  listen 443 ssl; # managed by Certbot
-  ssl_certificate /etc/letsencrypt/live/admin.gotchadiablo.com/fullchain.pem; # managed by Certbot
-  ssl_certificate_key /etc/letsencrypt/live/admin.gotchadiablo.com/privkey.pem; # managed by Certbot
-  include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-}
-
-server {
-    if ($host = admin.gotchadiablo.com) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-  server_name admin.gotchadiablo.com;
-    return 404; # managed by Certbot
 }
