--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,3 @@
 PORT=4111
 MONGODB_CNN = mongodb://kepler:BaLuNi1209@74.208.118.134:27017/gotchadiablo?authSource=admin
+SECRETORPRIVATEKEY = Balam@Lucia@Nicolas@12120920
