--- a/site.conf
+++ b/site.conf
@@ -1,5 +1,5 @@
 server {
-  root /var/lib/jenkins/workspace/GotchaDiablo_dev@2/page/dist/page/browser;
+  root /var/lib/jenkins/workspace/GotchaDiablo_dev/page/dist/page/browser;
   index index.html index.htm;
   server_name dev.gotchadiablo.com;
   access_log /var/log/nginx/dev.gotchadiablo.com.access.log;
