--- a/site.conf
+++ b/site.conf
@@ -1,11 +1,19 @@
+upstream backend.dev.gotchadiablo.com {
+  server 127.0.0.1:4012;
+}
+
 server {
-  root /var/lib/jenkins/workspace/GotchaDiablo_dev/page/dist/page/browser;
-  index index.html index.htm;
   server_name dev.gotchadiablo.com;
   access_log /var/log/nginx/dev.gotchadiablo.com.access.log;
   error_log /var/log/nginx/dev.gotchadiablo.com.error.log debug;
 
   location / {
-    try_files $uri $uri/ /index.html;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarder-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+
+    proxy_pass http://dev.gotchadiablo.com;
+    proxy_redirect off;
   }
 }
