--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,3 @@
 PORT=4011
-MONGODB_CNN = mongodb://kepler:BaLuNi1209@74.208.118.134:27017/gotchadiablo_dev?authSource=admin
+MONGODB_CNN = mongodb://Kepler:BaLuNi1209@74.208.118.134:27017/gotchadiablo_dev?authSource=admin
 SECRETORPRIVATEKEY = Balam@Lucia@Nicolas@12120920 
